refactor user detail endpoint
